force-app/main/default/objects/Heroku_Sync_Settings__c/Heroku_Sync_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Heroku Sync Settings</label>
</CustomObject>