force-app/main/default/objects/Heroku_Sync_Settings__c/fields/Encryption_Key_Heroku__c.field-meta.xml
<CustomField>
    <fullName>Encryption_Key_Heroku__c</fullName>
    <label>Encryption Key (Heroku)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>