force-app/main/default/objects/Heroku_Sync_Settings__c/fields/Init_Vector_SF__c.field-meta.xml
<CustomField>
    <fullName>Init_Vector_SF__c</fullName>
    <label>Init Vector (SF)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>